--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "source": "/",
+      "destination": "/public/index.html"
     },
     {
       "source": "/(.*)",
