--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dr-nnadi-records",
   "version": "2.0.0",
+  "type": "module",
   "description": "Dr Nnadi's Surgeries, Reviews and Procedures Management System",
   "main": "api/index.js",
   "scripts": {
