--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
+  "buildCommand": "echo 'No build needed'",
+  "outputDirectory": "public",
   "cleanUrls": true,
   "trailingSlash": false,
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/public/index.html"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/public/$1"
-    }
-  ],
   "headers": [
     {
       "source": "/api/(.*)",
