--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "author": "Dr Nnadi",
   "license": "MIT",
   "dependencies": {
-    "@vercel/postgres": "^0.5.1",
     "@prisma/client": "^7.2.0",
-    "@prisma/extension-accelerate": "^1.2.1"
+    "@prisma/extension-accelerate": "^1.2.1",
+    "@vercel/postgres": "^0.5.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "prisma": "^7.2.0"
